--- a/mixxx/res/translations/mixxx/fi.po
+++ b/mixxx/res/translations/mixxx/fi.po
@@ -8,18 +8,18 @@ msgstr ""
 "Project-Id-Version: mixxx\n"
 "Report-Msgid-Bugs-To: FULL NAME <EMAIL@ADDRESS>\n"
 "POT-Creation-Date: 2010-10-28 15:35-0400\n"
-"PO-Revision-Date: 2011-01-26 22:57+0000\n"
+"PO-Revision-Date: 2011-01-27 22:34+0000\n"
 "Last-Translator: Mika Haulo <Unknown>\n"
 "Language-Team: Finnish <fi@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
-"X-Launchpad-Export-Date: 2011-01-27 04:32+0000\n"
+"X-Launchpad-Export-Date: 2011-01-28 04:37+0000\n"
 "X-Generator: Launchpad (build 12177)\n"
 
 #: AutoDJFeature#1
 msgid "Auto DJ"
-msgstr ""
+msgstr "Auto DJ"
 
 #: BrowseFeature#1
 msgid "Browse"
@@ -158,19 +158,19 @@ msgstr ""
 
 #: DlgAboutDlg#3
 msgid "1.x.x"
-msgstr ""
+msgstr "1.x.x"
 
 #: DlgAboutDlg#4
 msgid "<a href=\"http://mixxx.org/\">Official Website</a>"
-msgstr ""
+msgstr "<a href=\"http://mixxx.org/\">Mixxxin verkkosivut</a>"
 
 #: DlgAutoDJ#1
 msgid "Disable Auto DJ"
-msgstr ""
+msgstr "Sammuta"
 
 #: DlgAutoDJ#2
 msgid "Enable Auto DJ"
-msgstr ""
+msgstr "Käynnistä"
 
 #: DlgAutoDJ#3
 msgctxt "DlgAutoDJ#3"
@@ -183,7 +183,7 @@ msgstr "Lisää raidat alla olevaan jonoon..."
 
 #: DlgBpmSchemeDlg#1
 msgid "BPM Scheme"
-msgstr ""
+msgstr "Tempoalue"
 
 #: DlgBpmSchemeDlg#2
 msgid "Scheme Name:"
@@ -290,7 +290,7 @@ msgstr "Temponmääritys"
 
 #: DlgPrefBPMDlg#3
 msgid "Enable BPM Detection"
-msgstr ""
+msgstr "Käytä temponmääritystä"
 
 #: DlgPrefBPMDlg#4
 msgid "Detect Song BPM on Import"
@@ -310,7 +310,7 @@ msgstr "Salli tempoalueen ylitys"
 
 #: DlgPrefBPMDlg#8
 msgid "BPM Schemes"
-msgstr ""
+msgstr "Tempoalueet"
 
 #: DlgPrefBPMDlg#9
 msgctxt "DlgPrefBPMDlg#9"
@@ -339,7 +339,7 @@ msgstr "Tiedostoa %1 ei voi avata"
 
 #: DlgPrefControls#1
 msgid "This skin does not support schemes"
-msgstr ""
+msgstr "Ei variaatioita"
 
 #: DlgPrefControls#2
 msgid "Up increases speed"
@@ -365,15 +365,15 @@ msgstr ""
 
 #: DlgPrefControlsDlg#2
 msgid "Skin"
-msgstr ""
+msgstr "Teema"
 
 #: DlgPrefControlsDlg#3
 msgid "Scheme"
-msgstr ""
+msgstr "Variaatio"
 
 #: DlgPrefControlsDlg#4
 msgid "Waveform display"
-msgstr ""
+msgstr "Aaltomuotonäyttö"
 
 #: DlgPrefControlsDlg#5
 msgid "Position display"
@@ -381,7 +381,7 @@ msgstr ""
 
 #: DlgPrefControlsDlg#6
 msgid "Tool tips"
-msgstr ""
+msgstr "Vihjetekstit"
 
 #: DlgPrefControlsDlg#7
 msgctxt "DlgPrefControlsDlg#7"
@@ -514,15 +514,15 @@ msgstr ""
 
 #: DlgPrefEQDlg#5
 msgid "16 Hz"
-msgstr ""
+msgstr "16 Hz"
 
 #: DlgPrefEQDlg#6
 msgid "2.045 kHz"
-msgstr ""
+msgstr "2,045 kHz"
 
 #: DlgPrefEQDlg#7
 msgid "20.05 kHz"
-msgstr ""
+msgstr "20,05 kHz"
 
 #: DlgPrefEQDlg#8
 msgid "Low Shelf EQ"
@@ -668,7 +668,7 @@ msgstr "Ei käytettävissä olevia MIDI-laitteita"
 #: DlgPrefPlaylist#1
 msgctxt "DlgPrefPlaylist#1"
 msgid "Choose music library directory"
-msgstr ""
+msgstr "Määritä musiikkikokoelman sijainti"
 
 #: DlgPrefPlaylist#2
 msgid "Multiple iPods Detected"
@@ -764,7 +764,7 @@ msgstr ""
 #: DlgPrefRecord#1
 msgctxt "DlgPrefRecord#1"
 msgid "Save Recording As..."
-msgstr ""
+msgstr "Tallenna äänitys nimellä..."
 
 #: DlgPrefRecord#2
 msgid "kbps"
@@ -791,7 +791,7 @@ msgstr "Selaa..."
 #: DlgPrefRecordDlg#4
 msgctxt "DlgPrefRecordDlg#4"
 msgid "Encoding"
-msgstr ""
+msgstr "Tiedostomuoto"
 
 #: DlgPrefRecordDlg#5
 msgid "Quality"
@@ -910,11 +910,11 @@ msgstr ""
 
 #: DlgPrefShoutcastDlg#21
 msgid "Website"
-msgstr ""
+msgstr "Verkkosivu"
 
 #: DlgPrefShoutcastDlg#22
 msgid "http://mixxx.sf.net"
-msgstr ""
+msgstr "http://mixxx.org"
 
 #: DlgPrefShoutcastDlg#23
 msgid "Description"
@@ -976,7 +976,7 @@ msgstr "192 kb/s"
 
 #: DlgPrefShoutcastDlg#34
 msgid "160 kbps"
-msgstr ""
+msgstr "160 kb/s"
 
 #: DlgPrefShoutcastDlg#35
 msgid "128 kbps"
@@ -1177,7 +1177,7 @@ msgstr "Latenssi"
 
 #: DlgPrefSoundDlg#12
 msgid "256 ms"
-msgstr ""
+msgstr "256 ms"
 
 #: DlgPrefSoundDlg#13
 msgctxt "DlgPrefSoundDlg#13"
@@ -1249,7 +1249,7 @@ msgstr ""
 
 #: DlgPrefVinylDlg#2
 msgid "Input"
-msgstr ""
+msgstr "Sisääntulot"
 
 #: DlgPrefVinylDlg#3
 msgid "Deck 1"
@@ -1265,6 +1265,9 @@ msgid ""
 "href=\"http://www.mixxx.org/wiki/doku.php/vinyl_control#troubleshooting\">Tro"
 "ubleshooting</a>"
 msgstr ""
+"<a "
+"href=\"http://www.mixxx.org/wiki/doku.php/vinyl_control#troubleshooting\">Via"
+"nmääritys (engl.)</a>"
 
 #: DlgPrefVinylDlg#6
 msgid "Turntable Preamp"
@@ -1316,11 +1319,11 @@ msgstr ""
 
 #: DlgPrefVinylDlg#18
 msgid "Signal Quality"
-msgstr ""
+msgstr "Signaalin laatu"
 
 #: DlgPrefVinylDlg#19
 msgid "http://www.xwax.co.uk"
-msgstr ""
+msgstr "http://www.xwax.co.uk"
 
 #: DlgPrefVinylDlg#20
 msgid "Powered by xwax"
@@ -1332,7 +1335,7 @@ msgstr ""
 
 #: DlgPreferences#2
 msgid "MIDI Controllers"
-msgstr ""
+msgstr "MIDI-ohjaimet"
 
 #: DlgPreferences#3
 msgctxt "DlgPreferences#3"
@@ -1354,7 +1357,7 @@ msgstr ""
 #: DlgPreferences#7
 msgctxt "DlgPreferences#7"
 msgid "Recording"
-msgstr ""
+msgstr "Äänitys"
 
 #: DlgPreferences#8
 msgctxt "DlgPreferences#8"
@@ -1376,7 +1379,7 @@ msgstr ""
 
 #: DlgPreferencesDlg#2
 msgid "1"
-msgstr ""
+msgstr "1"
 
 #: DlgPrepare#1
 msgctxt "DlgPrepare#1"
@@ -1393,11 +1396,11 @@ msgstr "Kaikki kappaleet"
 
 #: DlgPrepare#4
 msgid "Progress"
-msgstr ""
+msgstr "Edistyminen"
 
 #: DlgPrepare#5
 msgid "Select All"
-msgstr ""
+msgstr "Valitse kaikki"
 
 #: DlgPrepare#6
 msgctxt "DlgPrepare#6"
@@ -1418,7 +1421,7 @@ msgstr ""
 
 #: DlgTrackInfo#4
 msgid "Artist:"
-msgstr ""
+msgstr "Artisti:"
 
 #: DlgTrackInfo#5
 msgid "Album:"
@@ -1430,7 +1433,7 @@ msgstr ""
 
 #: DlgTrackInfo#7
 msgid "Track #:"
-msgstr ""
+msgstr "Raita #:"
 
 #: DlgTrackInfo#8
 msgid "Genre:"
@@ -1466,11 +1469,11 @@ msgstr ""
 
 #: DlgTrackInfo#16
 msgid "Track Information (Click to Expand)"
-msgstr ""
+msgstr "Perustiedot"
 
 #: DlgTrackInfo#17
 msgid "Track BPM: "
-msgstr ""
+msgstr "Tempo "
 
 #: DlgTrackInfo#18
 msgid "x2"
@@ -1575,7 +1578,7 @@ msgstr ""
 #: EngineRecord#1
 msgctxt "EngineRecord#1"
 msgid "Recording"
-msgstr ""
+msgstr "Äänitys"
 
 #: EngineRecord#2
 msgid ""
@@ -1640,11 +1643,11 @@ msgstr "Varoitus"
 #: ErrorDialogHandler#4
 msgctxt "ErrorDialogHandler#4"
 msgid "Information"
-msgstr ""
+msgstr "Tietoja"
 
 #: ErrorDialogHandler#5
 msgid "Question"
-msgstr ""
+msgstr "Kysymys"
 
 #: ITunesFeature#1
 msgid "iTunes"
@@ -1652,7 +1655,7 @@ msgstr "iTunes"
 
 #: ITunesFeature#2
 msgid "Load iTunes Library?"
-msgstr ""
+msgstr "Ladataanko iTunes-kokoelma?"
 
 #: ITunesFeature#3
 msgid "Would you like to load your iTunes library?"
@@ -1696,12 +1699,12 @@ msgstr "Sijanti"
 #: ITunesPlaylistModel#8
 msgctxt "ITunesPlaylistModel#8"
 msgid "Duration"
-msgstr ""
+msgstr "Kesto"
 
 #: ITunesPlaylistModel#9
 msgctxt "ITunesPlaylistModel#9"
 msgid "Unknown"
-msgstr ""
+msgstr "Tuntematon"
 
 #: LADSPAPresetSlot#1
 msgid "Drag a preset from the list & drop it here"
@@ -1713,7 +1716,7 @@ msgstr "Kokoelman skannaaminen kestää hetken. Ole hyvä ja odota..."
 
 #: LibraryScannerDlg#2
 msgid "Cancel"
-msgstr ""
+msgstr "Keskeytä"
 
 #: LibraryTableModel#1
 msgctxt "LibraryTableModel#1"
@@ -1738,7 +1741,7 @@ msgstr "Tyylilaji"
 #: LibraryTableModel#5
 msgctxt "LibraryTableModel#5"
 msgid "Year"
-msgstr ""
+msgstr "Vuosi"
 
 #: LibraryTableModel#6
 msgctxt "LibraryTableModel#6"
@@ -1758,12 +1761,12 @@ msgstr ""
 #: LibraryTableModel#9
 msgctxt "LibraryTableModel#9"
 msgid "Duration"
-msgstr ""
+msgstr "Kesto"
 
 #: LibraryTableModel#10
 msgctxt "LibraryTableModel#10"
 msgid "Bitrate"
-msgstr ""
+msgstr "Bittinopeus"
 
 #: LibraryTableModel#11
 msgctxt "LibraryTableModel#11"
@@ -1842,12 +1845,12 @@ msgstr ""
 #: MidiOutputMappingTableModel#3
 msgctxt "MidiOutputMappingTableModel#3"
 msgid "Midi Channel"
-msgstr ""
+msgstr "MIDI-kanava"
 
 #: MidiOutputMappingTableModel#4
 msgctxt "MidiOutputMappingTableModel#4"
 msgid "Control Group"
-msgstr ""
+msgstr "Ohjainryhmä"
 
 #: MidiOutputMappingTableModel#5
 msgctxt "MidiOutputMappingTableModel#5"
@@ -1889,7 +1892,7 @@ msgstr ""
 #: MidiStatusDelegate#1
 msgctxt "MidiStatusDelegate#1"
 msgid "Unknown"
-msgstr ""
+msgstr "Tuntematon"
 
 #: MissingTableModel#1
 msgctxt "MissingTableModel#1"
@@ -1934,7 +1937,7 @@ msgstr ""
 #: MissingTableModel#9
 msgctxt "MissingTableModel#9"
 msgid "Duration"
-msgstr ""
+msgstr "Kesto"
 
 #: MissingTableModel#10
 msgctxt "MissingTableModel#10"
@@ -1944,7 +1947,7 @@ msgstr "Raita #"
 #: MissingTableModel#11
 msgctxt "MissingTableModel#11"
 msgid "Bitrate"
-msgstr ""
+msgstr "Bittinopeus"
 
 #: MissingTableModel#12
 msgctxt "MissingTableModel#12"
